# chuid

./: Makefile.in  README.md  aclocal.m4  config.h.in  configure.ac
.github/workflows/: checkmarx.yml  codacy.yml  codeql.yml
man/: Makefile.am  Makefile.in  chuid.1
src/: Makefile.am  Makefile.in  chuid.c  chuid.h  config.c  hash.c  queue.c  safe-funcs.c
